--- a/src/components/mailBox/css/mailListHeader.css
+++ b/src/components/mailBox/css/mailListHeader.css
@@ -11,7 +11,6 @@
 .mailListHeader-wrapper p {
   white-space: nowrap;
   color: #3E3D3D;
-  font-family: Inter;
   font-size: 0.8125rem;
   font-style: normal;
   font-weight: 600;
@@ -29,8 +28,8 @@
   outline: none;
 
   white-space: nowrap;
+  font-family: 'SUIT', sans-serif;
   color: #3E3D3D;
-  font-family: Inter;
   font-size: 0.8125rem;
   font-style: normal;
   font-weight: 600;
