--- a/src/components/mailBox/css/timeSortedList.css
+++ b/src/components/mailBox/css/timeSortedList.css
@@ -1,6 +1,5 @@
 .timeSortedList-wrapper {
   display: flex;
-  width: 24.125rem;
   height: 100%;
   padding: 0.75rem 1rem;
   flex-direction: column;
@@ -25,10 +24,15 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  white-space: nowrap;
 }
 
 .timeSortedList-container {
   display: flex;
   width: 100%;
   flex-direction: column;
+}
+.timeSortedList-container p {
+  white-space: nowrap;
+  font-size: 0.8rem;
 }
