--- a/src/screens/mailBox/css/mailScreen.css
+++ b/src/screens/mailBox/css/mailScreen.css
@@ -21,3 +21,34 @@
   box-sizing: border-box;
   height: 100%;
 }
+
+/* 모바일 */
+@media (max-width: 425px) {
+  .MailScreen-container {
+    flex-direction: column;
+    height: 100%;
+  }
+
+  .MailScreen-list {
+    display: block;
+    flex: none;
+    width: 100%;
+    height: 100%;
+  }
+
+  .MailScreen-preview {
+    display: none;
+  }
+
+  /* showPreview 상태일 때 전환 */
+  .MailScreen-container.show-preview .MailScreen-list {
+    display: none;
+  }
+
+  .MailScreen-container.show-preview .MailScreen-preview {
+    display: block;
+    flex: none;
+    width: 100%;
+    height: 100%;
+  }
+}
