--- a/src/components/mailBox/css/senderGroupedList.css
+++ b/src/components/mailBox/css/senderGroupedList.css
@@ -1,5 +1,6 @@
 .senderGroupedList-wrapper {
   display: flex;
+  width: 100%;
   height: 100%;
   flex-direction: column;
   align-items: flex-start;
@@ -8,4 +9,11 @@
 .senderGroupedList-wrapper P {
   white-space: nowrap;
   font-size: 0.8rem;
+}
+
+/* 모바일 */
+@media (max-width: 425px) {
+  .senderGroupedList-wrapper {
+    align-items: normal;
+  }
 }
