--- a/src/components/menu/css/menuItem.css
+++ b/src/components/menu/css/menuItem.css
@@ -95,3 +95,9 @@
   background: #FFF;
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
+
+@media (max-width: 425px) {
+  .menuItem-wrapper {
+    display: block;
+  }
+}
