--- a/src/components/mailBox/css/senderGroupedList.css
+++ b/src/components/mailBox/css/senderGroupedList.css
@@ -5,6 +5,7 @@
   flex-direction: column;
   align-items: flex-start;
   gap: 1.5rem;
+  overflow-y: auto;
 }
 .senderGroupedList-wrapper P {
   white-space: nowrap;
