fix: Ensure access token is fetched before mailbox API call

--- a/src/components/mailBox/css/mailDetail.css
+++ b/src/components/mailBox/css/mailDetail.css
@@ -43,6 +43,11 @@
   line-height: normal;
 }
 
+.expandArrow-icon {
+  width: 6rem;
+  height: 6rem;
+}
+
 .mailDetail-files {
   gap: 0.5rem;
   margin-bottom: 1.5rem;
