fix: service start button

--- a/src/screens/css/landingScreen.css
+++ b/src/screens/css/landingScreen.css
@@ -76,25 +76,16 @@
     line-height: normal;
   }
   
-  .buttonContainer {
+  .serviceStartButton {
     position: absolute;
     display: inline-block;
-    width: 13.5625rem;
-    height: 4.75rem;
-    top: 20%;
+    top: calc(18.2% + 5.1875rem + 1rem);
     left: 50%;
     transform: translateX(-50%);
-    cursor: pointer;
-    z-index: 1;
-  }
-  
-  .serviceStartButton {
-    position: relative;
-    display: block;
     width: 12.5625rem;
     height: 3.75rem;
-    padding: 0.5rem;
-    outline: none;
+    box-sizing: border-box;
+    cursor: pointer;
   }
   
   .catchphraseShadow {
@@ -311,17 +302,12 @@
       width: 80%;
     }
   
-    .buttonContainer {
-      top: calc(11.2% + 5.1875rem + 1rem);
-      left: 50%;
-      transform: translateX(-50%);
-      width: 11rem;
-      height: 4.25rem;
-    }
-    
     .serviceStartButton {
-      width: 10rem;
-      height: 3.5rem;
+        top: calc(11.2% + 5.1875rem + 1rem);
+        left: 50%;
+        transform: translateX(-50%);
+        width: 10rem;
+        height: 3.5rem;
     }
   
     .catchphraseShadow,
@@ -413,14 +399,13 @@
       font-size: clamp(1rem, calc(1rem + 1vw), 1.25rem);
       width: 40%;
     }
-    .buttonContainer {
-      top: 20%;
-      width: 13.5625rem;
-      height: 4.75rem;
-    }
+    
     .serviceStartButton {
       width: 12.5625rem;
       height: 3.75rem;
+      top: calc(18.2% + 5.1875rem + 1rem);
+        left: 50%;
+        transform: translateX(-50%);
     }
     .catchphraseShadow,
     .catchphrase1 {
@@ -497,14 +482,13 @@
       font-size: clamp(1rem, calc(1rem + 1vw), 1.25rem);
       width: 40%;
     }
-    .buttonContainer {
-      top: 20%;
-      width: 13.5625rem;
-      height: 4.75rem;
-    }
+
     .serviceStartButton {
-      width: 12.5625rem;
-      height: 3.75rem;
+        width: 12.5625rem;
+        height: 3.75rem;
+        top: calc(18.2% + 5.1875rem + 1rem);
+        left: 50%;
+        transform: translateX(-50%);
     }
     .catchphraseShadow,
     .catchphrase1 {
@@ -581,14 +565,12 @@
       font-size: clamp(1rem, calc(1.1rem + 1vw), 1.3rem);
       width: 40%;
     }
-    .buttonContainer {
-      top: 20%;
-      width: 14rem;
-      height: 5rem;
-    }
     .serviceStartButton {
-      width: 13rem;
-      height: 4rem;
+        width: 13rem;
+        height: 4rem;
+        top: calc(26.2% + 5.1875rem + 1rem);
+        left: 50%;
+        transform: translateX(-50%);
     }
     .catchphraseShadow,
     .catchphrase1 {
