--- a/src/components/mailBox/css/mailBoxLayout.css
+++ b/src/components/mailBox/css/mailBoxLayout.css
@@ -3,6 +3,18 @@
   margin: 0.4rem;
   height: 95vh;
   gap: 1rem;
+  position: relative;
+}
+
+/* 모달이 열릴 때 배경을 어둡게 덮는 오버레이 */
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.4);
+  z-index: 999;
 }
 
 /* 메일함 헤더 + 컨텐츠 스타일 */
