--- a/src/screens/mailBox/css/mailScreen.css
+++ b/src/screens/mailBox/css/mailScreen.css
@@ -12,6 +12,7 @@
   width: 100%;
   box-sizing: border-box;
   height: 100%;
+  padding: 0.5rem;
 }
 
 .MailScreen-preview {
@@ -20,6 +21,8 @@
   width: 100%;
   box-sizing: border-box;
   height: 100%;
+  overflow-x: auto;
+  padding: 0.5rem;
 }
 
 /* 모바일 */
