--- a/src/components/mailBox/css/fileItem.css
+++ b/src/components/mailBox/css/fileItem.css
@@ -1,7 +1,9 @@
 .fileItem-wrapper {
   display: flex;
+  flex-direction: column;
   width: 4.75rem;
   height: 5rem;
+  gap: 0.25rem;
   padding: 0.125rem;
   justify-content: center;
   border-radius: 0.375rem;
