--- a/src/components/mailBox/css/mailDetail.css
+++ b/src/components/mailBox/css/mailDetail.css
@@ -13,6 +13,7 @@
   border-radius: 0.625rem 0.625rem 3.5625rem 0.625rem;
   background: rgba(255, 255, 255, 0.82);
   box-shadow: 0px 0px 10.3px 0px rgba(0, 0, 0, 0.25);
+  overflow: hidden;
 }
 
 .mailDetail-header {
@@ -32,7 +33,8 @@
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 700;
-  line-height: normal;;
+  line-height: normal;
+  ;
 }
 
 .mailDetail-sender {
@@ -68,15 +70,16 @@
 }
 
 .mailDetail-content {
-  height: 20.875rem;
-  flex-shrink: 0;
-  align-self: stretch;
+  flex: 1;
+  min-height: 0;
+  width: 100%;
   color: #3E3D3D;
   font-size: 0.625rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1.0625rem;
-  overflow: scroll;
+  overflow-y: auto;
+  padding-right: 0.5rem;
 }
 
 .mailDetail-footer {
