--- a/src/components/mailBox/css/mailPreviewItem.css
+++ b/src/components/mailBox/css/mailPreviewItem.css
@@ -2,7 +2,9 @@
   display: flex;
   justify-content: flex-end;
   gap: 0.25rem;
+  margin-bottom: 1rem;
 }
+
 .mailPreviewItem-wrapper.received {
   justify-content: flex-start;
 }
@@ -11,6 +13,7 @@
   display: flex;
   padding: 1.75rem;
   width: 60%;
+  max-width: 600px;
   flex-direction: column;
   align-self: stretch;
   position: relative;
@@ -19,6 +22,7 @@
   background: rgba(255, 255, 255, 0.82);
   box-shadow: 0px 0px 10.3px 0px rgba(0, 0, 0, 0.25) inset;
 }
+
 .mailPreviewItem-container.received {
   border-radius: 0.625rem 0.625rem 0.625rem 3.5625rem;
   align-items: flex-end;
@@ -29,6 +33,7 @@
   justify-content: space-between;
   width: 100%;
 }
+
 .mailPreviewItem-header.received {
   display: flex;
   justify-content: space-between;
@@ -40,6 +45,7 @@
   flex-direction: column;
   gap: 0.5rem;
 }
+
 .mailPreviewItem-header-container.received {
   order: 1;
   align-items: flex-end;
@@ -67,6 +73,7 @@
   width: 1.4375rem;
   height: 1.4375rem;
 }
+
 .mailPreviewItem-arrow.received {
   order: 0;
 }
@@ -78,15 +85,20 @@
   font-style: normal;
   font-weight: 500;
   line-height: 1.0625rem;
+  max-height: 300px;
+  overflow-y: auto;
+  padding-right: 0.5rem;
+  word-break: break-word;
 }
 
 .mailPreviewItem-footer {
   position: absolute;
-  bottom: -1rem;
+  bottom: -1.5rem;
   color: rgba(114, 114, 114, 0.60);
 
   font-size: 0.5rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
+  white-space: nowrap;
 }
