--- a/src/components/mailBox/css/mailDetail.css
+++ b/src/components/mailBox/css/mailDetail.css
@@ -3,6 +3,7 @@
   height: 100%;
   flex-direction: column;
   gap: 0.5rem;
+  overflow: hidden;
 }
 
 .mailDetail-container {
@@ -20,6 +21,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 0.5rem;
+  flex-shrink: 0;
 }
 
 .mailDetail-header-container {
@@ -34,7 +36,7 @@
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  ;
+  word-break: break-word;
 }
 
 .mailDetail-sender {
@@ -48,11 +50,13 @@
 .expandArrow-icon {
   width: 2rem;
   height: 2rem;
+  flex-shrink: 0;
 }
 
 .mailDetail-files {
   gap: 0.5rem;
   margin-bottom: 1.5rem;
+  flex-shrink: 0;
 }
 
 .mailDetail-files-title {
@@ -72,19 +76,21 @@
 .mailDetail-content {
   flex: 1;
   min-height: 0;
-  width: 100%;
+  overflow-y: auto;
   color: #3E3D3D;
   font-size: 0.625rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1.0625rem;
-  overflow-y: auto;
   padding-right: 0.5rem;
+  word-break: break-word;
 }
 
 .mailDetail-footer {
   display: flex;
   justify-content: flex-end;
+  margin-top: 1rem;
+  flex-shrink: 0;
 }
 
 .mailDetail-sendAt,
