--- a/src/components/mailBox/css/mailPreviewItem.css
+++ b/src/components/mailBox/css/mailPreviewItem.css
@@ -3,6 +3,7 @@
   justify-content: flex-end;
   gap: 0.25rem;
   margin-bottom: 1rem;
+  max-width: 100%;
 }
 
 .mailPreviewItem-wrapper.received {
@@ -15,23 +16,23 @@
   width: 60%;
   max-width: 600px;
   flex-direction: column;
-  align-self: stretch;
   position: relative;
   gap: 0.5rem;
   border-radius: 0.625rem 0.625rem 3.5625rem 0.625rem;
   background: rgba(255, 255, 255, 0.82);
   box-shadow: 0px 0px 10.3px 0px rgba(0, 0, 0, 0.25) inset;
+  overflow: hidden;
 }
 
 .mailPreviewItem-container.received {
   border-radius: 0.625rem 0.625rem 0.625rem 3.5625rem;
-  align-items: flex-end;
 }
 
 .mailPreviewItem-header {
   display: flex;
   justify-content: space-between;
   width: 100%;
+  flex-shrink: 0;
 }
 
 .mailPreviewItem-header.received {
@@ -44,6 +45,7 @@
   display: flex;
   flex-direction: column;
   gap: 0.5rem;
+  overflow: hidden;
 }
 
 .mailPreviewItem-header-container.received {
@@ -53,25 +55,28 @@
 
 .mailPreviewItem-title {
   color: rgba(62, 61, 61, 0.90);
-
   font-size: 0.875rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  word-break: break-word;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 .mailPreviewItem-sender {
   color: rgba(62, 61, 61, 0.26);
-
   font-size: 0.625rem;
   font-style: normal;
   font-weight: 700;
   line-height: normal;
+  word-break: break-word;
 }
 
 .mailPreviewItem-arrow {
   width: 1.4375rem;
   height: 1.4375rem;
+  flex-shrink: 0;
 }
 
 .mailPreviewItem-arrow.received {
@@ -80,25 +85,24 @@
 
 .mailPreviewItem-content {
   color: rgba(62, 61, 61, 0.71);
-
   font-size: 0.625rem;
   font-style: normal;
   font-weight: 500;
   line-height: 1.0625rem;
-  max-height: 300px;
   overflow-y: auto;
-  padding-right: 0.5rem;
+  max-height: 300px;
   word-break: break-word;
+  padding-right: 0.5rem;
 }
 
 .mailPreviewItem-footer {
   position: absolute;
   bottom: -1.5rem;
   color: rgba(114, 114, 114, 0.60);
-
   font-size: 0.5rem;
   font-style: normal;
   font-weight: 500;
   line-height: normal;
   white-space: nowrap;
+  z-index: 1;
 }
