--- a/src/components/mailBox/css/mailListItem.css
+++ b/src/components/mailBox/css/mailListItem.css
@@ -5,6 +5,7 @@
   cursor: pointer;
   z-index: 1;
 }
+
 .mailListItem-wrapper:hover {
   background-color: rgba(229, 231, 233, 0.4);
 }
@@ -16,6 +17,11 @@
   padding: 0.5rem;
   cursor: pointer;
   position: relative;
+  transition: transform 0.1s ease-in-out;
+}
+
+.mailListItem-custom-checkBox:hover {
+  transform: scale(1.1);
 }
 
 /* 체크박스 숨기기 */
@@ -31,6 +37,7 @@
   border: 1px solid #b3b3b3;
   display: inline-block;
   position: relative;
+  transition: all 0.2s ease-in-out;
 }
 
 /* 체크박스 hover 시 테두리 변경 */
@@ -39,13 +46,14 @@
 }
 
 /* 체크박스 선택 시 스타일 */
-.mailListItem-custom-checkBox input:checked + .checkmark {
+.mailListItem-custom-checkBox input:checked+.checkmark {
   background-color: #9590D5;
   border-color: #9590D5;
+  transform: scale(1.1);
 }
 
 /* 체크된 상태에서 체크 표시 */
-.mailListItem-custom-checkBox input:checked + .checkmark::after {
+.mailListItem-custom-checkBox input:checked+.checkmark::after {
   content: "";
   position: absolute;
   top: 40%;
@@ -55,6 +63,7 @@
   border: solid white;
   border-width: 0 2px 2px 0;
   transform: translate(-50%, -50%) rotate(45deg);
+  transition: transform 0.2s ease-in-out;
 }
 
 .mailListItem-star-container {
@@ -62,6 +71,7 @@
   align-items: center;
   padding: 0.5rem;
 }
+
 .mailListItem-star {
   width: 16px;
   height: 16px;
@@ -69,7 +79,8 @@
   stroke: #a5a5a5;
   stroke-width: 1.4px;
 }
-.mailListItem-star.impotant{
+
+.mailListItem-star.impotant {
   fill: yellow;
 }
 
@@ -79,6 +90,7 @@
   padding: 0.5rem 0.5rem 0.5rem 0;
   gap: 0.5rem;
 }
+
 .mailListItem-mailInfo-m {
   display: flex;
   width: 100%;
