fix: Update checkbox and mail action refresh logic

--- a/src/components/mailBox/css/mailListItem.css
+++ b/src/components/mailBox/css/mailListItem.css
@@ -80,8 +80,9 @@
   stroke-width: 1.4px;
 }
 
-.mailListItem-star.impotant {
-  fill: yellow;
+.mailListItem-star.important {
+  color: #FFD700;
+  stroke: #ddbf76;
 }
 
 .mailListItem-mailInfo {
